feat: users/tenants CRUD
